--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.3
 google-cloud-speech==2.27.0
 google-cloud-language==2.17.0
+google-cloud-texttospeech==2.25.1
 vertexai==1.71.1
 gunicorn==22.0.0
